2002-07-25  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.4cvs
 
2002-07-24  Kevin Puetz  <puetzk@iastate.edu>

	* gui/ui/oprof_start.base.ui: fix resize
 
2002-07-22  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil/op_fileio.c:
	* libutil/op_fileio.h: opd_get_link() new, read a symlink filename
	* libutil++/file_manip.cpp:
	* libutil++/file_manip.h: opd_read_link() use the above function

	* dae/opd_image.c:
	* dae/opd_parse_proc.c: fix #584723 we can not assume than the first
	  map in /proc/pid/maps is the the map for the binary image

2002-07-21  John Levon  <moz@compsoc.man.ac.uk>

	* configure.in: bump to 0.3
 
2002-07-17  William Cohen  <wcohen@nc.rr.com>
 
	* gui/oprof_start_util.cpp: get HZ from sysconf

2002-07-17  Philippe Elie  <phil.el@wanadoo.fr>

	* gui/oprof_start.base.ui: revert patch 2002-07-13, reapply
	  the same modification with QT2 designer rather QT3 designer

2002-07-14  John Levon  <moz@compsoc.man.ac.uk>

	* Makefile.in: set KVERS properly
 
	* dae/oprofiled.c: remove eip == 0 checking
 
	* module/oprofile.c: do check in evict_op_entry() instead,
	  as suggested by Philippe
 
2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* make.deps:
	* gui/Makefile.in: fix include search path for dependencies generation

2002-07-13  John Levon  <moz@compsoc.man.ac.uk>

	* dae/oprofiled.c: don't throw away last samples on shutdown
	  notification
 
2002-07-13  Philippe Elie  <phil.el@wanadoo.fr>

	* TODO: update

	* doc/oprofile.1.in:
	* doc/oprofile.xml:
	* gui/oprof_start.cpp:
	* gui/oprof_start_config.cpp:
	* gui/oprof_start_config.h:
	* gui/oprof_start.base.ui: remove kernel-range specification UI

2002-07-12  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
	* dae/oprofiled.c:
	* libop/op_interface.h: 
	* module/oprofile.c: 
	* module/oprofile.h:
	* module/x86/op_nmi.c: 
	* module/x86/op_syscalls.c: replace partial_stop,quitting,prof_on
	  with single state variable, and clean up how shutdown is triggered.