@@ -125,7 +125,7 @@ string const get_options(int argc, char const **argv)
 		outsymbflag fl =
 			output_symbol::ParseOutputOption(output_format);
 
-		if (fl == osf_none) {
+		if (fl == osf_none || (fl & ~(osf_header|osf_details)) == 0) {
 			std::cerr << "oprofpp: invalid --output-format flags.\n";
 			output_symbol::ShowHelp();
 			exit(EXIT_FAILURE);
