@@ -1,3 +1,14 @@
+2002-07-26  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/op_time_options.cpp:
+	* pp/oprofpp_options.cpp: output format header or details are illegal
+	  if not combined with other output format flag
+
+	* pp/opp_symbol.cpp:
+	* pp/opp_symbol.h:
+	* pp/oprofpp.cpp:
+	* pp/outsymbflag.h: minor cleanup
+
 2002-07-25  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in: bump to 0.4cvs
